# parallel_labs

./: CMakeLists.txt  Parallel_Labs.slnx  output1.csv  output2.csv  output3.csv  output4.csv  Сборка.txt  лаб1.txt  лаб2.txt  лаб3.txt  лаб4.txt
Project1/: CMakeLists.txt  Project1.cpp
Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk
Project1/x64/Debug/Project1.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.secondary.1.tlog  link.write.1.tlog
Project2/: CMakeLists.txt  Project2.cpp  Project2.vcxproj
Project2/x64/Debug/: Project2.exe.recipe  Project2.ilk  vc145.idb
Project2/x64/Debug/Project2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Project3/: CMakeLists.txt  Project3.vcxproj  Project3.vcxproj.filters  parallel_mod.vcxproj
Project3/x64/Debug/: Project3.exe.recipe  Project3.ilk  vc145.idb
Project3/x64/Debug/Project3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Project4/: CMakeLists.txt  Project4.cpp  Project4.vcxproj.filters
Project4/x64/Debug/: vc145.idb
Project4/x64/Debug/Project4.tlog/: CL.write.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab1/: Project1.vcxproj
lab1/x64/Debug/: vc145.idb
lab1/x64/Debug/Project1.tlog/: CL.command.1.tlog  link.command.1.tlog  link.read.1.tlog
lab4/: Project4.vcxproj
lab4/x64/Debug/: Project4.exe.recipe  Project4.ilk
lab4/x64/Debug/Project4.tlog/: CL.command.1.tlog  (+5 more)
